# prop-analytics-ui

./: .gitignore  README.md  app.py  duckdb_importer.py  pyproject.toml
data/: prices.parquet  prices_loc.parquet  prices_loc_unencrypted.parquet  prices_unencrypted.parquet
